tests/ui-nightly/transmute-pointer.stderr
error[E0277]: the trait bound `*const usize: AsBytes` is not satisfied
 --> tests/ui-nightly/transmute-pointer.rs:7:50
  |
7 | const POINTER_VALUE: usize = zerocopy::transmute(&0usize as *const usize);
  |                              ------------------- ^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `*const usize`
  |                              |
  |                              required by a bound introduced by this call
  |
  = help: the trait `AsBytes` is implemented for `usize`
note: required by a bound in `zerocopy::transmute`
 --> src/lib.rs
  |
  | pub const fn transmute<Src, Dst>(src: Src) -> Dst
  |              --------- required by a bound in this function
  | where
  |     Src: AsBytes,
  |          ^^^^^^^ required by this bound in `transmute`

error[E0277]: the trait bound `*const usize: AsBytes` is not satisfied
 --> tests/ui-nightly/transmute-pointer.rs:7:30
  |
7 | const POINTER_VALUE: usize = zerocopy::transmute(&0usize as *const usize);
  |                              ^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `*const usize`
  |
  = help: the trait `AsBytes` is implemented for `usize`
  = note: required for `usize` to implement `TransmuteFrom<*const usize>`
note: required by a bound in `zerocopy::transmute`
 --> src/lib.rs
  |
  | pub const fn transmute<Src, Dst>(src: Src) -> Dst
  |              --------- required by a bound in this function
...
  |     Dst: FromBytes + TransmuteFrom<Src>,
  |                      ^^^^^^^^^^^^^^^^^^ required by this bound in `transmute`
